# MemorEngine

./: LICENSE  README.md  todo.txt
Memor/: CMakeLists.txt  main.cpp  memor.h
Memor/src/: action.cpp  action.hpp  animation.cpp  animation.hpp  assets.hpp  memor.cpp  memor.hpp  physics.cpp  physics.hpp  scene.cpp  scene.hpp  scenemenu.cpp  scenemenu.hpp  sceneplay.cpp  sceneplay.hpp
Memor/src/A1/: circle.cpp  circle.hpp  rectangle.cpp  rectangle.hpp
Memor/src/camera/: camera.cpp  camera.hpp  lockedfollowcam.cpp  lockedfollowcam.hpp
Memor/src/components/: canimation.hpp  cboundbox.hpp  ccollision.hpp  cgravity.hpp  cinput.hpp  clifespan.hpp  component.hpp  components.hpp  cscore.hpp  cshape.hpp  cstate.hpp  ctransform.hpp
Memor/src/entity/: ecs.cpp  ecs.hpp  entity.cpp  entity.hpp  entitymanager.cpp  entitymanager.hpp
Memor/src/math/: mat4.cpp  mat4.hpp  math.hpp  radians.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
Memor/src/memorlogger/: log.cpp  log.hpp  logger.hpp
Memor/src/physics/: aabb.cpp  detection.cpp  detection.hpp  gravity.cpp  gravity.hpp  physics.cpp  physics.hpp  restitution.hpp
Memor/src/renderables/: animation.cpp  animation.hpp  assets.cpp  assets.hpp  renderables.hpp
Memor/src/scenes/: loadingscene.hpp  scene.cpp  scene.hpp  startscreen.cpp  startscreen.hpp
Memor/src/utils/: fileread.h  generaterandom.h  text.cpp  text.hpp  timer.hpp  utils.hpp
Memor/temp/: scenemenu.cpp  scenemenu.hpp
documentation/: mkdocs.yml
documentation/docs/: memor.md
documentation/site/: 404.html
(+20 files in other folders)
